contour/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rumadi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: httpbin
    hosts:
    - rumadilb.crabdance.com
  rules:
  - host: rumadilb.crabdance.com
    http:
      paths:
      - backend:
          serviceName: nodered
          servicePort: 1880
